; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_func.c_FuncNameAsType.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_func.c_FuncNameAsType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@InvalidOid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @FuncNameAsType to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @FuncNameAsType(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @makeTypeNameFromNameList(i32* %6)
  %8 = call i32* @LookupTypeNameExtended(i32* null, i32 %7, i32* null, i32 0, i32 0)
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @InvalidOid, align 4
  store i32 %12, i32* %2, align 4
  br label %34

13:                                               ; preds = %1
  %14 = load i32*, i32** %5, align 8
  %15 = call i64 @GETSTRUCT(i32* %14)
  %16 = inttoptr i64 %15 to %struct.TYPE_2__*
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %28

20:                                               ; preds = %13
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @typeTypeRelid(i32* %21)
  %23 = call i32 @OidIsValid(i32 %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %28, label %25

25:                                               ; preds = %20
  %26 = load i32*, i32** %5, align 8
  %27 = call i32 @typeTypeId(i32* %26)
  store i32 %27, i32* %4, align 4
  br label %30

28:                                               ; preds = %20, %13
  %29 = load i32, i32* @InvalidOid, align 4
  store i32 %29, i32* %4, align 4
  br label %30

30:                                               ; preds = %28, %25
  %31 = load i32*, i32** %5, align 8
  %32 = call i32 @ReleaseSysCache(i32* %31)
  %33 = load i32, i32* %4, align 4
  store i32 %33, i32* %2, align 4
  br label %34

34:                                               ; preds = %30, %11
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local i32* @LookupTypeNameExtended(i32*, i32, i32*, i32, i32) #1

declare dso_local i32 @makeTypeNameFromNameList(i32*) #1

declare dso_local i64 @GETSTRUCT(i32*) #1

declare dso_local i32 @OidIsValid(i32) #1

declare dso_local i32 @typeTypeRelid(i32*) #1

declare dso_local i32 @typeTypeId(i32*) #1

declare dso_local i32 @ReleaseSysCache(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
